Footer: embed alignment fix

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -31,3 +31,6 @@ footer .embed > div{
   padding-bottom: 20% !important;
   bottom: 35px;
 }
+footer h2:nth-of-type(2){
+  margin-top: 0;
+}
